# subpatch

./: .gitignore  404.html  CNAME  LICENSE  Makefile  README.internal.md  README.internal.todo.md  README.md  README.website.md  index.html  index.md  index.rst.away  list.sh  mkdocs.list  mkdocs.yml  pyproject.toml  search.html  sitemap.xml  sphinx.list  src-files-graph.dot  subpatch  subpatch.py
_build/doctrees/: environment.pickle  imprint.doctree  index.doctree
_build/doctrees/exp/: comparison.doctree  design.doctree  history.doctree  intro.doctree
_build/doctrees/ref/: config-format.doctree  glossary.doctree  releases.doctree
_build/doctrees/tut/: basic-usage.doctree  installation.doctree
_build/html/: genindex.html  imprint.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.md.txt  index.rst.txt
_build/html/_sources/exp/: comparison.md.txt  design.md.txt  history.md.txt  intro.md.txt
_build/html/_sources/ref/: config-format.md.txt  glossary.md.txt
_build/html/_sources/tut/: basic-usage.md.txt  installation.md.txt
_build/html/exp/: comparison.html  design.html  history.html  intro.html
_build/html/ref/: config-format.html  glossary.html  releases.html
_build/html/tut/: basic-usage.html  installation.html
docs/: impressum.md  index.md
docs/exp/: comparison.md  design-goals.md
docs/ref/: glossary.md
docs/tut/: basic-usage.md  installation.md
exp/: 0001-website-rewrite-R1.patch  comparison.md.orig  design.md.orig  faq.md.orig  history.md.orig  intro.md.orig  intro.md.saved
exp/benefits/: index.html
exp/comparison/: index.html
exp/design/: index.html
exp/design-goals/: index.html
exp/faq/: index.html
exp/history/: index.html
exp/impl/: index.html
exp/intro/: index.html
exp/learnings/: index.html
exp/requirements/: index.html
howto/yocto/: index.html
howto/zephyr/: index.html
imprint/: index.html
ref/: fosdem25.md.orig  glossary.md.orig  glossary.md.todo
ref/command-line/: index.html
ref/config-format/: index.html
ref/format/: index.html
ref/fosdem25/: index.html
ref/froscon25/: index.html
ref/glossary/: index.html
ref/releases/: index.html
scripts/: pybundle.py
search/: search_index.json
src/: cache.py  config.py  git.py  libconfig.py  libgit.py  main.py  super.py  util.py
tests/: helpers.py  index.md.diff  localwebserver.py  test_cache.py  test_config.py  test_git.py  test_lib.py  test_main.py  test_prog.py  test_submodule.py  test_super.py  test_util.py
tut/applying-patches/: index.html
tut/basic-usage/: index.html
tut/installation/: index.html
website/: CNAME  conf.py  imprint.md  index.md
website-tests/: tutorial-basic-usage.sh
website-theme-overrides/: main.html
website/exp/: benefits.md  comparison.md  design-goals.md  design.md  faq.md  history.md  impl.md  intro.md  learnings.md  requirements.md
website/howto/: yocto.md  zephyr.md
website/ref/: command-line.md  format.md  fosdem25.md  froscon25.md  glossary.md  releases.md
website/tut/: applying-patches.md  basic-usage.md  installation.md
