[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "subpatch"
dynamic = ["version"]
dependencies = []

# TODO set on correct python version
requires-python = ">= 3.8"
authors = [
  {name = "Stefan Lengfeld", email = "stefan@lengfeld.xyz"}
]
maintainers = [
  {name = "Stefan Lengfeld", email = "stefan@lengfeld.xyz"}
]
description = "fearless multi-repository management - stay relaxed!"

# TODO The toplevel README and the first page of the website should be the
# same!
readme = "website/index.md"

# It's the SPDX identifier. See https://spdx.org/licenses/GPL-2.0-or-later.html
license = {text = "GPL-2.0-or-later"}

# See https://pypi.org/classifiers/ for all classifiers
classifiers = [
    # TODO Update Status at some point
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
]

[project.urls]
# TODO add keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
Homepage = "https://subpatch.net"
Repository = "https://github.com/lengfeld/subpatch"
Issues = "https://github.com/lengfeld/subpatch/issues"
# TODO Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
subpatch = "subpatch:main"

[tool.setuptools.dynamic]
version = {attr = "subpatch.__version__"}

[tool.setuptools]
py-modules = ["subpatch"]
