[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# To see a linters execute `ruff linter`
extend-select = [
  "I", # isort
  "UP", # pyupgrade
  "E", # pycodestyle
]
ignore = [
  "E402", # ignore because the test/test_*.py files contain a import hack
  "I001", # ignore because it conflicts with the default isort formatting
  "UP031", # ignore for now because there are so many percentage format specifiers used
]

[project]
name = "subpatch"
dynamic = ["version"]
dependencies = []

requires-python = ">= 3.11"
authors = [
  {name = "Stefan Lengfeld", email = "stefan@lengfeld.xyz"}
]
maintainers = [
  {name = "Stefan Lengfeld", email = "stefan@lengfeld.xyz"}
]
description = "fearless multi repository management - stay relaxed!"

readme = "README.md"

# It's the SPDX identifier. See https://spdx.org/licenses/GPL-2.0-only.html
license = "GPL-2.0-only"
license-files = ["LICENSE_*"]

# See https://pypi.org/classifiers/ for all classifiers
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
# TODO add keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
Homepage = "https://subpatch.net"
Repository = "https://github.com/lengfeld/subpatch"
Issues = "https://github.com/lengfeld/subpatch/issues"
# TODO Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
subpatch = "subpatch:main"

[tool.setuptools.dynamic]
version = {attr = "subpatch.__version__"}

[tool.setuptools]
py-modules = ["subpatch"]
